i created mvc area and after that i created controller. i created Index action and add action to my created area controller and then run it and render its pages

--- a/ECommerce.WebApp/Views/Home/Index.cshtml
+++ b/ECommerce.WebApp/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/_Layout.cshtml";
 }
+<a href="/admin/Default/Add">Add</a>
 <table id="customers" class="table table-responsive">
     <tr>
         <th>Title</th>
