--- a/ECommerce.WebApp/Areas/admin/Views/Default/Update.cshtml
+++ b/ECommerce.WebApp/Areas/admin/Views/Default/Update.cshtml
@@ -1,36 +1,41 @@
-﻿
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *,ECommerce.WebApp
 @model ECommerce.WebApp.Models.ViewModel
 @{
     ViewData["Title"] = "Update";
     Layout = "~/Views/_Layout.cshtml";
 }
-<h3 style="text-align:center;">Add to Blog</h3>
-@using (Html.BeginForm())
-{
+<h3 style="text-align:center;">Update Blog</h3>
 
+<form asp-controller="Default" asp-action="Update" method="post">
+    @foreach (var item in Model.Products)
+    {
 
-    <div class="container">
-        <div class="row">
-            @foreach (var item in Model.Products)
-
-            {
-                <div class="col-md-12" style="margin-top:10px;margin-bottom:10px;">
-                    <input type="text" name="ProductTitle" class="form-control" value="@item.ProductTitle" />
-                </div>
-                <div class="col-md-12" style="margin-top:10px;margin-bottom:10px;">
-                    <textarea name="ProductDescription" class="form-control">@item.ProductDescription</textarea>
-                </div>
-                <div class="col-md-12" style="margin-top:10px;margin-bottom:10px;">
-                    <input type="number" name="StockQuantity" class="form-control" value="@item.StockQuantity" />
-                </div>
-            }
-            <div class="col-md-12" style="margin-top:10px;margin-bottom:10px;">
-                <button type="submit" class="btn btn-primary"> Update</button>
-            </div>
+        <div class="form-group">
+            <label asp-for="Product.ProductTitle"></label>
+            <input asp-for="Product.ProductTitle" value="@item.ProductTitle" class="form-control" />
+            <span asp-validation-for="Product.ProductTitle"></span>
         </div>
+
+        <div class="form-group">
+            <label asp-for="Product.ProductDescription"></label>
+            <textarea asp-for="Product.ProductDescription" class="form-control">@item.ProductDescription</textarea>
+            <span asp-validation-for="Product.ProductDescription"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Product.StockQuantity"></label>
+            <input type="number" asp-for="Product.StockQuantity" value="@item.StockQuantity" class="form-control" />
+            <span asp-validation-for="Product.StockQuantity"></span>
+        </div>
+
+    }
+    <div class="form-group">
+        <label asp-for="Product.CategoryId"></label>
+        <select asp-for="Product.CategoryId" class="form-control" asp-items="@(new SelectList(Model.Categories,"CategoryId","CategoryName"))"></select>
+        <span asp-validation-for="Product.CategoryId"></span>
     </div>
-
-
-}
+    <input type="hidden" asp-for="Product.ProductId" />
+    <input type="submit" value="Update" class="btn btn-success" />
+</form>
 
 
