--- a/ECommerce.WebApp/Areas/admin/Views/Default/Add.cshtml
+++ b/ECommerce.WebApp/Areas/admin/Views/Default/Add.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Add";
     Layout = "~/Views/_Layout.cshtml";
 }
-<h3 style="text-align:center;">Add to Blog</h3>
+<h3 style="text-align:center;">Add to Product</h3>
 <form asp-controller="Default" asp-action="Add" method="post">
     <div class="form-group">
         <label asp-for="Product.ProductTitle"></label>
