--- a/ECommerce.WebApp/Areas/admin/Views/Default/Update.cshtml
+++ b/ECommerce.WebApp/Areas/admin/Views/Default/Update.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Update";
     Layout = "~/Views/_Layout.cshtml";
 }
-<h3 style="text-align:center;">Update Blog</h3>
+<h3 style="text-align:center;">Update Product</h3>
 
 <form asp-controller="Default" asp-action="Update" method="post">
     @foreach (var item in Model.Products)
