İ created 2 ModelController after that my crud controller I moved the crud operations in my controller where I have the CRUD operations to my new controller

--- a/ECommerce.WebApp/Areas/admin/Views/Category/UpdateCategory.cshtml
+++ b/ECommerce.WebApp/Areas/admin/Views/Category/UpdateCategory.cshtml
@@ -7,7 +7,7 @@
 }
 <h3 style="text-align:center;">Update Categry</h3>
 
-<form asp-controller="Default" asp-action="UpdateCategory" method="post">
+<form asp-controller="Category" asp-action="UpdateCategory" method="post">
     @foreach (var item in Model.Categories)
     {
 
