--- a/ECommerce.WebApp/Areas/admin/Views/Category/AddCategory.cshtml
+++ b/ECommerce.WebApp/Areas/admin/Views/Category/AddCategory.cshtml
@@ -6,7 +6,7 @@
     Layout = "~/Views/_Layout.cshtml";
 }
 <h3 style="text-align:center;">Add to Category</h3>
-<form asp-controller="Default" asp-action="AddCategory" method="post">
+<form asp-controller="Category" asp-action="AddCategory" method="post">
     <div class="form-group">
         <label asp-for="Category.CategoryName"></label>
         <input asp-for="Category.CategoryName" class="form-control" placeholder="Product Title" />
