--- a/ECommerce.WebApp/Areas/admin/Views/Product/Add.cshtml
+++ b/ECommerce.WebApp/Areas/admin/Views/Product/Add.cshtml
@@ -6,7 +6,7 @@
     Layout = "~/Views/_Layout.cshtml";
 }
 <h3 style="text-align:center;">Add to Product</h3>
-<form asp-controller="Default" asp-action="Add" method="post">
+<form asp-controller="Product" asp-action="Add" method="post">
     <div class="form-group">
         <label asp-for="Product.ProductTitle"></label>
         <input asp-for="Product.ProductTitle" class="form-control" placeholder="Product Title" />
