--- a/ECommerce.WebApp/Areas/admin/Views/Product/Index.cshtml
+++ b/ECommerce.WebApp/Areas/admin/Views/Product/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model ECommerce.WebApp.Models.ViewModel
+﻿@model IEnumerable<ECommerce.Entities.Entities.Concrete.Product>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/_Layout.cshtml";
@@ -12,7 +12,7 @@
         <th>Stock</th>
         <th>Process</th>
     </tr>
-    @foreach (var item in Model.Products)
+    @foreach (var item in Model)
     {
         @if (item.StockQuantity == 0)
         {
@@ -38,26 +38,5 @@
                 </td>
             </tr>
         }
-    }
-    <br />
-    <br />
-    <br />
-    <tr>
-        <th>Category Id</th>
-        <th>Category Name</th>
-        <th>Process</th>
-
-    </tr>
-    @foreach (var item in Model.Categories)
-    {
-        <tr>
-            <th>@item.CategoryId</th>
-            <th>@item.CategoryName</th>
-            <td>
-                <a class="btn btn-info" href="/admin/Category/UpdateCategory/@item.CategoryId">Update</a>
-                <a class="btn btn-danger" href="/admin/Category/DeleteCategory/@item.CategoryId">Delete</a>
-            </td>
-
-        </tr>
     }
 </table>
