--- a/ECommerce.WebApp/Areas/admin/Views/Product/Update.cshtml
+++ b/ECommerce.WebApp/Areas/admin/Views/Product/Update.cshtml
@@ -7,7 +7,7 @@
 }
 <h3 style="text-align:center;">Update Product</h3>
 
-<form asp-controller="Default" asp-action="Update" method="post">
+<form asp-controller="Product" asp-action="Update" method="post">
     @foreach (var item in Model.Products)
     {
 
@@ -37,5 +37,3 @@
     <input type="hidden" asp-for="Product.ProductId" />
     <input type="submit" value="Update" class="btn btn-success" />
 </form>
-
-
