I fixed navbar,footer and I created AdminLayout after that I fixed Admin Crud operation views layout but i didn't commit because i was in the wrong directory after this procedures I created Cart operation (I started by extending the ISession interface, I needed to create a method for this, then adding to the cart needs to be fed with the Session mechanism, so it is necessary to keep every product in the cart. For this, I created the CartLine model. In this model, I used my Product model as the cart element and I created the variable Quantity I need to create the cart itself, for this I created the Cart model. There are products in this model in the cart, for this I need to list the items in the cart, namely my CartLine model. I defined and implemented a method to see the total in the basket. I have added, deleted and listed in this service. Inside Session I created a CartServices to manage our Cart object Then I create a CartSessionService to add product since HttpContext.Session is web based object so it needs to be used while live, I have defined methods for this service to read my Session object )

--- a/ECommerce.WebApp/Areas/admin/Views/Category/AddCategory.cshtml
+++ b/ECommerce.WebApp/Areas/admin/Views/Category/AddCategory.cshtml
@@ -3,7 +3,7 @@
 @model ECommerce.WebApp.Models.ViewModel
 @{
     ViewData["Title"] = "AddCategory";
-    Layout = "~/Views/_Layout.cshtml";
+    Layout = "~/Views/_AdminLayout.cshtml";
 }
 <h3 style="text-align:center;">Add to Category</h3>
 <form asp-controller="Category" asp-action="AddCategory" method="post">
