--- a/ECommerce.WebApp/Areas/admin/Views/Product/Add.cshtml
+++ b/ECommerce.WebApp/Areas/admin/Views/Product/Add.cshtml
@@ -3,7 +3,7 @@
 @model ECommerce.WebApp.Models.ViewModel
 @{
     ViewData["Title"] = "Add";
-    Layout = "~/Views/_Layout.cshtml";
+    Layout = "~/Views/_AdminLayout.cshtml";
 }
 <h3 style="text-align:center;">Add to Product</h3>
 <form asp-controller="Product" asp-action="Add" method="post">
