--- a/ECommerce.WebApp/Areas/admin/Views/Product/Update.cshtml
+++ b/ECommerce.WebApp/Areas/admin/Views/Product/Update.cshtml
@@ -3,7 +3,7 @@
 @model ECommerce.WebApp.Models.ViewModel
 @{
     ViewData["Title"] = "Update";
-    Layout = "~/Views/_Layout.cshtml";
+    Layout = "~/Views/_AdminLayout.cshtml";
 }
 <h3 style="text-align:center;">Update Product</h3>
 
