I fixed Admin index and a couple of another fixes

--- a/ECommerce.WebApp/Views/_AdminLayout.cshtml
+++ b/ECommerce.WebApp/Views/_AdminLayout.cshtml
@@ -136,18 +136,11 @@
         <ul>
             <li><a href="/Home/Index">Home Page</a></li>
             <li>
-                <a href="">Cart</a>
-                <ul>
-                    <li><a href="">php</a></li>
-                </ul>
-            </li>
-            <li>
                 <a href="/admin/Product/Add">Add a product</a>
             </li>
             <li>
-                <a href="/admin/Category/Add">Add a product</a>
+                <a href="/admin/Category/Add">Add a category</a>
             </li>
-            <li><a href="">Contact Us</a></li>
         </ul>
     </header>
     <div class="col-md-10" style="margin-top:75px;">
