--- a/ECommerce.WebApp/Areas/admin/Views/Default/Index.cshtml
+++ b/ECommerce.WebApp/Areas/admin/Views/Default/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model ECommerce.WebApp.Models.ViewModel
+﻿@model IEnumerable<ECommerce.Entities.Entities.Concrete.Product>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/_AdminLayout.cshtml";
@@ -9,9 +9,12 @@
         <th>Title</th>
         <th>Description</th>
         <th>Stock</th>
-        <th>Process</th>
+        <th>Product Process</th>
+        <th>Category Id</th>
+        <th>Category Name</th>
+        <th>Category Process</th>
     </tr>
-    @foreach (var item in Model.Products)
+    @foreach (var item in Model)
     {
         @if (item.StockQuantity == 0)
         {
@@ -22,6 +25,12 @@
                 <td>
                     <a class="btn btn-info" href="/admin/Product/Update/@item.ProductId">Update</a>
                     <a class="btn btn-danger" href="/admin/Product/Delete/@item.ProductId">Delete</a>
+                </td>
+                <td>@item.CategoryId</td>
+                <td>@item.Category.CategoryName</td>
+                <td>
+                    <a class="btn btn-info" href="/admin/Category/UpdateCategory/@item.CategoryId">Update</a>
+                    <a class="btn btn-danger" href="/admin/Category/DeleteCategory/@item.CategoryId">Delete</a>
                 </td>
             </tr>
         }
@@ -35,28 +44,14 @@
                     <a class="btn btn-info" href="/admin/Product/Update/@item.ProductId">Update</a>
                     <a class="btn btn-danger" href="/admin/Product/Delete/@item.ProductId">Delete</a>
                 </td>
+                <td>@item.CategoryId</td>
+                <td>@item.Category.CategoryName</td>
+                <td>
+                    <a class="btn btn-info" href="/admin/Category/UpdateCategory/@item.CategoryId">Update</a>
+                    <a class="btn btn-danger" href="/admin/Category/DeleteCategory/@item.CategoryId">Delete</a>
+                </td>
             </tr>
         }
     }
-    <br />
-    <br />
-    <br />
-    <tr>
-        <th>Category Id</th>
-        <th>Category Name</th>
-        <th>Process</th>
-
-    </tr>
-    @foreach (var item in Model.Categories)
-    {
-        <tr>
-            <th>@item.CategoryId</th>
-            <th>@item.CategoryName</th>
-            <td>
-                <a class="btn btn-info" href="/admin/Category/UpdateCategory/@item.CategoryId">Update</a>
-                <a class="btn btn-danger" href="/admin/Category/DeleteCategory/@item.CategoryId">Delete</a>
-            </td>
-
-        </tr>
     }
 </table>
