--- a/ECommerce.WebApp/Views/Home/Index.cshtml
+++ b/ECommerce.WebApp/Views/Home/Index.cshtml
@@ -14,6 +14,7 @@
         <tr>
             <td>@item.ProductTitle</td>
             <td>@item.ProductDescription</td>
+            <td><a href="Home/Index/AddToCart" class="btn btn-success">Add To Cart</a></td>
         </tr>
     }
 </table>
