--- a/ECommerce.WebApp/Views/Shared/Components/Category/Default.cshtml
+++ b/ECommerce.WebApp/Views/Shared/Components/Category/Default.cshtml
@@ -2,7 +2,6 @@
     @foreach (var item in Model.Categories)
     {
         var css = "list-group-item";
-        <!--Kategorileri belirgenleştirir-->
-        <a href="/home/index?category=@item.CategoryId" class="list-group-item">@item.CategoryName</a>
+        <a href="/home/index/category=@item.CategoryId" class="list-group-item">@item.CategoryName</a>
     }
 </div>
