--- a/ECommerce.WebApp/Views/Home/Index.cshtml
+++ b/ECommerce.WebApp/Views/Home/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@model IEnumerable<ECommerce.Entities.Entities.Concrete.Product>
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, ECommerce.WebApp
+
+@model IEnumerable<ECommerce.Entities.Entities.Concrete.Product>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/_Layout.cshtml";
@@ -14,7 +17,10 @@
         <tr>
             <td>@item.ProductTitle</td>
             <td>@item.ProductDescription</td>
-            <td><a href="Home/Index/AddToCart" class="btn btn-success">Add To Cart</a></td>
+            <td>
+                <a class="btn btn-success" asp-controller="Cart"
+                   asp-action="AddToCart" asp-route-productId="@item.ProductId">Add to cart</a>
+            </td>
         </tr>
     }
 </table>
