--- a/ECommerce.WebApp/Views/Shared/Components/CartSummary/Default.cshtml
+++ b/ECommerce.WebApp/Views/Shared/Components/CartSummary/Default.cshtml
@@ -1,5 +1,5 @@
-﻿
-
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, ECommerce.WebApp
 <ul class="dropdown-menu">
     @foreach (var item in Model.Cart.CartLines)
     {
