--- a/ECommerce.WebApp/Views/Cart/CartList.cshtml
+++ b/ECommerce.WebApp/Views/Cart/CartList.cshtml
@@ -1,4 +1,6 @@
-﻿@model ECommerce.WebApp.Models.ViewModel
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, ECommerce.WebApp
+@model ECommerce.WebApp.Models.ViewModel
 @{
     ViewData["Title"] = "CartList";
     Layout = "~/Views/_Layout.cshtml";
@@ -19,6 +21,10 @@
             <td>@item.Product.ProductTitle</td>
             <td>@item.Product.ProductDescription</td>
             <td>@item.Quantity.</td>
+            <td class="text-right">
+                <a class="btn btn-danger" asp-controller="Cart" asp-action="Remove" asp-route-productId="@item.Product.ProductId">Remove</a>
+            </td>
         </tr>
     }
+
 </table>
