I created complete shopping action

--- a/ECommerce.WebApp/Views/Cart/CartList.cshtml
+++ b/ECommerce.WebApp/Views/Cart/CartList.cshtml
@@ -26,5 +26,20 @@
             </td>
         </tr>
     }
+<tr>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td class="text-right">
+        <a asp-controller="Home" asp-action="Index" class="btn btn-secondary">
+            <span class="glyphicon-shopping-play"></span>Continue Shooping
+        </a>
+    </td>
+    <td class="text-right">
+        <a asp-controller="Cart" asp-action="CompleteSopping" class="btn btn-secondary">
+            <span class="glyphicon-shopping-play"></span>Checkout
+        </a>
+    </td>
+</tr>
 
 </table>
