The stock decrease was not connected to the database i fixed it i deleted the unnecessary codes

--- a/ECommerce.WebApp/Views/_AdminLayout.cshtml
+++ b/ECommerce.WebApp/Views/_AdminLayout.cshtml
@@ -139,7 +139,7 @@
                 <a href="/admin/Product/Add">Add a product</a>
             </li>
             <li>
-                <a href="/admin/Category/Add">Add a category</a>
+                <a href="/admin/Category/AddCategory">Add a category</a>
             </li>
         </ul>
     </header>
