--- a/ECommerce.WebApp/Views/Cart/CompleteShopping.cshtml
+++ b/ECommerce.WebApp/Views/Cart/CompleteShopping.cshtml
@@ -7,7 +7,7 @@
 <h1>CompleteShopping</h1>
 <div class="container">
     <div class="row">
-        <form action="~/Cart/CompleteShopping/" method="post">
+        <form action="~/Cart/CompleteShopping" method="post">
             <div class="input-group form-group">
                 <div class="input-group-prepend">
                     <span class="input-group-text"><i class="fas fa-user"></i></span>
