--- a/ECommerce.WebApp/Views/Shared/Components/Category/Default.cshtml
+++ b/ECommerce.WebApp/Views/Shared/Components/Category/Default.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="list-group">
+﻿@model ECommerce.WebApp.Models.ViewModel
+<div class="list-group">
     @foreach (var item in Model.Categories)
     {
         var css = "list-group-item";
