--- a/ECommerce.WebApp/Views/_AdminLayout.cshtml
+++ b/ECommerce.WebApp/Views/_AdminLayout.cshtml
@@ -134,7 +134,10 @@
 <body>
     <header>
         <ul>
-            <li><a href="/Home/Index">Home Page</a></li>
+            <li><a href="/admin/product/Index">Category</a></li>
+            <li><a href="/admin/category/Index">Product</a></li>
+
+            <li><a href="/admin/default/Index">Admin Home Page</a></li>
             <li>
                 <a href="/admin/Product/Add">Add a product</a>
             </li>
