--- a/ECommerce.WebApp/Views/Home/Index.cshtml
+++ b/ECommerce.WebApp/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, ECommerce.WebApp
 
-@model IEnumerable<ECommerce.Entities.Entities.Concrete.Product>
+@model ECommerce.WebApp.Models.ViewModel
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/_Layout.cshtml";
@@ -12,7 +12,7 @@
         <th>Title</th>
         <th>Description</th>
     </tr>
-    @foreach (var item in Model)
+    @foreach (var item in Model.Products)
     {
         <tr>
             <td>@item.ProductTitle</td>
@@ -24,3 +24,7 @@
         </tr>
     }
 </table>
+<product-list-pager current-category="@Model.CurrentCategory"
+                    current-page="@Model.CurrentPage"
+                    page-count="@Model.PageCount"
+                    page-size="@Model.PageSize"></product-list-pager>
