--- a/ECommerce.WebApp/Views/Shared/Components/Category/Default.cshtml
+++ b/ECommerce.WebApp/Views/Shared/Components/Category/Default.cshtml
@@ -2,7 +2,11 @@
 <div class="list-group">
     @foreach (var item in Model.Categories)
     {
-        var css = "list-group-item";
-        <a href="/home/index/category=@item.CategoryId" class="list-group-item">@item.CategoryName</a>
+        <!--var cssChange = "list-group-item";
+         if (item.CategoryId == Model.CurrentCategory)
+         {
+             cssChange += "dark";
+         }-->
+        <a href="/home/index?category=@item.CategoryId" class="list-group-item">@item.CategoryName</a>
     }
 </div>
