now create to WebAAPİ

--- a/ECommerce.WebApp/Views/Cart/CartList.cshtml
+++ b/ECommerce.WebApp/Views/Cart/CartList.cshtml
@@ -7,7 +7,7 @@
 }
 
 <h1>CartList</h1>
-<table>
+<table  id="customers" class="table table-responsive" style="text-align:center">
     <tr>
         <td>Product Title</td>
         <td>Description</td>
