--- a/ECommerce.WebApp/Areas/admin/Views/Default/Index.cshtml
+++ b/ECommerce.WebApp/Areas/admin/Views/Default/Index.cshtml
@@ -1,9 +1,11 @@
-﻿@model ECommerce.WebApp.Models.ViewModel
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, ECommerce.WebApp
+@model ECommerce.WebApp.Models.ViewModel
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/_AdminLayout.cshtml";
 }
-@using (Html.BeginForm("Index", "Default","admin", FormMethod.Get))
+@using (Html.BeginForm("Index", "Default", "admin", FormMethod.Get))
 {
     @Html.TextBox("searchString")
     <input type="submit" value="Search" />
@@ -60,3 +62,7 @@
         }
     }
 </table>
+<product-list-pager current-category="@Model.CurrentCategory"
+                    current-page="@Model.CurrentPage"
+                    page-count="@Model.PageCount"
+                    page-size="@Model.PageSize"></product-list-pager>
