--- a/ECommerce.WebApp/Views/_AdminLayout.cshtml
+++ b/ECommerce.WebApp/Views/_AdminLayout.cshtml
@@ -134,8 +134,8 @@
 <body>
     <header>
         <ul>
-            <li><a href="/admin/product/Index">Category</a></li>
-            <li><a href="/admin/category/Index">Product</a></li>
+            <li><a href="/admin/category/Index">Category</a></li>
+            <li><a href="/admin/product/Index">Product</a></li>
 
             <li><a href="/admin/default/Index">Admin Home Page</a></li>
             <li>
@@ -147,8 +147,13 @@
         </ul>
     </header>
     <div class="col-md-10" style="margin-top:75px;">
-
-        @RenderBody()
+        <div class="col col-md-12">
+        @if (TempData["message"] != null)
+        {
+            <div class="alert alert-info" role="alert">@TempData["message"]</div>
+        }
+    </div>
+    @RenderBody()
     </div>
     <div class="container-fluid justify-content-center text-light" style="margin-bottom:0px;">
         <footer>
